<resources>
    <string name="app_name">Flota Despacho</string>
    <string name="pass_login">Ingrese su contraseña</string>
    <string name="user_login">Ingrese el usuario</string>
    <string name="btn_Ingresar">Ingresar</string>
    <string name="title_activity_menu">Vigitrack Cia.Ltda</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="title_toolbar_drawer">Vigitrack Cia.Ltda</string>
    <string name="text_rutas">Flotas</string>
    <string name="text_despacho">Despacho</string>
    <string name="text_conteo">Producción</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="menu_share">Compartir</string>
    <string name="menu_send">Enviar</string>
    <string name="developer">Developer : Vigitrack Cia.Ltda</string>
    <string name="generar_product">GENERAR REPORTE</string>
    <string name="select_empresa">Empresa</string>
    <string name="Comando">Comandos</string>
    <string name="Reloj">Enviar Relojes</string>
    <string name="Avanza">Avanzado</string>
    <string name="gps">Rastreo Unidad</string>
    <string name="unidad">UNIDAD</string>
    <string name="druta">RUTA</string>
    <string name="generar">GENERAR</string>
    <string name="asig_salida">ASIGNAR SALIDA</string>
    <string name="progresdialog">Cargando Datos Espere</string>
    <string name="add_unidad">Nueva Unidad</string>
    <string name="generar_tarjeta">GENERAR TARJETA</string>
    <string name="add_ruta">Asignar Ruta</string>
    <string name="hora">HORA</string>
    <string name="fecha">FECHA</string>
    <string name="frecuencia">FRECUENCIA</string>
    <string name="CANCELAR" />
    <string name="cancela">CANCELAR</string>
    <string name="Rutas">Rutas</string>
    <string-array name="Empresas">
        <item>Selecione su Empresa</item>
        <item>Cooperativa Salitre</item>
        <item>Horizonte</item>
        <item>Citim</item>
        <item>Orquidia Amazonica</item>
        <item>Rio Tigre</item>
        <item>Marcelino</item>
        <item>Prado-Eco</item>
        <item>Consorcio Rem</item>
        <item>Sultana de Cotopaxi</item>
        <item>Santa Lucia</item>
        <item>Ruta Portovejense</item>
        <item>Santa Elisa</item>
        <item>Yaguachi</item>
        <item>Santa Clara</item>
        <item>Intra-Puyo</item>
        <item>Sucua</item>
        <item>Trujama SA</item>
        <item>Otavalo-Lagos</item>
        <item>Tungurahua</item>
        <item>Miraflores</item>
        <item>Ricay</item>
        <item>Ecuatoriana</item>
        <item>Trunsa</item>
        <item>Liribamba</item>
        <item>Puruha</item>
        <item>Transfransa</item>
        <item>Quitumbe</item>
        <item>28Septiembre</item>
        <item>Union Ambatena</item>
        <item>Vepiex</item>
        <item>San Juan</item>
        <item>Santa Martha</item>
        <item>CitiBus</item>
        <item>Transisa</item>
    </string-array>
    <string-array name="tipo_mapas_array">
        <item>Normal</item>
        <item>Satelital</item>
        <item>Hibrido</item>
        <item>Terrestre</item>
    </string-array>
</resources>
