<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" >
            <group android:checkableBehavior="single">
                <item
                    android:id="@+id/tab_rastreo_unidad"
                    android:title="@string/gps"
                    >
                </item>
                <item
                    android:id="@+id/tab_nueva_unidad"
                    android:title="@string/add_unidad"
                    >
                </item>
            </group>
    <item
        android:title="@string/Rutas"
        >
        <menu>
            <item
                android:id="@+id/tab_asig_ruta"
                android:title="@string/add_ruta"
                >
            </item>
        </menu>
    </item>
</menu>