<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <androidx.cardview.widget.CardView
        app:cardCornerRadius="8dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:textSize="@dimen/text_size_card_salida"
                android:background="@color/colorPrimary"
                android:textColor="@color/primaryText"
                android:textAlignment="center"
                android:text="@string/developer"
                android:textStyle="bold|normal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
            </TextView>
            <LinearLayout
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <LinearLayout
                        android:gravity="center"
                        android:weightSum="1"
                        android:orientation="horizontal"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">
                        <LinearLayout
                            android:orientation="horizontal"
                            android:layout_weight="0.6"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content">
                            <TextView
                                android:layout_marginRight="5dp"
                                android:textColor="@color/secondText"
                                android:textStyle="bold|normal"
                                android:textSize="@dimen/text_size_card_salida_sub"
                                android:text="@string/unidad"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content">
                            </TextView>
                            <Spinner
                                android:gravity="center|center_vertical"
                                android:textAlignment="center"
                                android:id="@+id/spinner_alert_unidad"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content">
                            </Spinner>
                        </LinearLayout>
                        <LinearLayout
                            android:gravity="center|center_horizontal"
                            android:orientation="horizontal"
                            android:layout_weight="0.5"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content">
                            <TextView
                                android:layout_gravity="center"
                                android:textColor="@color/secondText"
                                android:textStyle="bold|normal"
                                android:textSize="@dimen/text_size_card_salida_sub"
                                android:text="@string/hora"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content">
                            </TextView>
                            <TextView
                                android:id="@+id/textview_alert_hora"
                                android:textAlignment="center"
                                android:textSize="@dimen/text_size_card_salida"
                                android:textColor="@color/secondText"
                                android:textStyle="bold|normal"
                                android:text="00:00:00"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content">
                            </TextView>
                        </LinearLayout>
                    </LinearLayout>
                </LinearLayout>
                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <LinearLayout
                        android:gravity="center"
                        android:weightSum="1"
                        android:orientation="horizontal"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">
                        <LinearLayout
                            android:orientation="horizontal"
                            android:layout_weight="0.6"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content">
                            <TextView
                                android:layout_marginRight="5dp"
                                android:gravity="center"
                                android:textColor="@color/secondText"
                                android:textStyle="bold|normal"
                                android:textSize="@dimen/text_size_card_salida_sub"
                                android:text="@string/druta"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content">
                            </TextView>
                            <Spinner
                                android:gravity="center|center_vertical"
                                android:textAlignment="center"
                                android:id="@+id/spinner_alert_ruta"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content">
                            </Spinner>
                        </LinearLayout>
                        <LinearLayout
                            android:gravity="center|center_horizontal"
                            android:orientation="horizontal"
                            android:layout_weight="0.5"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content">
                            <TextView
                                android:layout_gravity="center"
                                android:textColor="@color/secondText"
                                android:textStyle="bold|normal"
                                android:textSize="@dimen/text_size_card_salida_sub"
                                android:text="@string/fecha"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content">
                            </TextView>
                            <TextView
                                android:id="@+id/textview_alert_fecha"
                                android:textAlignment="center"
                                android:textSize="@dimen/text_size_fecha"
                                android:textColor="@color/secondText"
                                android:textStyle="bold|normal"
                                android:text="0000-00-00"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content">
                            </TextView>
                        </LinearLayout>
                    </LinearLayout>
                </LinearLayout>
                <LinearLayout
                    android:layout_gravity="center_horizontal"
                    android:gravity="center|center_horizontal"
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <LinearLayout
                        android:layout_marginTop="2dp"
                        android:layout_gravity="center_horizontal"
                        android:gravity="center|center_horizontal"
                        android:orientation="horizontal"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">
                        <LinearLayout
                            android:gravity="center|center_horizontal"
                            android:orientation="horizontal"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content">
                            <TextView
                                android:textColor="@color/secondText"
                                android:textStyle="bold|normal"
                                android:textSize="@dimen/text_size_card_salida_sub"
                                android:text="@string/frecuencia"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content">
                            </TextView>
                            <Spinner
                                android:layout_gravity="center"
                                android:textAlignment="center"
                                android:id="@+id/spinner_alert_frecuencia"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content">
                            </Spinner>
                        </LinearLayout>
                    </LinearLayout>
                </LinearLayout>
            </LinearLayout>
            <LinearLayout
                android:orientation="horizontal"
                android:layout_weight="1"
                android:background="@color/colorPrimary"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <Button
                    android:id="@+id/btn_alert_generar"
                    android:layout_weight="0.5"
                    android:textStyle="bold|normal"
                    android:text="@string/generar"
                    android:theme="@style/RaisedButtonDark"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                </Button>
                <Button
                    android:id="@+id/btn_alert_cancelar"
                    android:layout_weight="0.5"
                    android:textStyle="bold|normal"
                    android:text="@string/cancela"
                    android:theme="@style/RaisedButtonDark"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                </Button>
            </LinearLayout>
        </LinearLayout>
    </androidx.cardview.widget.CardView>
</LinearLayout>