<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="match_parent"
    tools:context=".Fragments.SalidaFragment">
    <androidx.cardview.widget.CardView
        android:layout_margin="10dp"
        android:background="@color/colorPrimary"
        android:elevation="8dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <androidx.appcompat.widget.LinearLayoutCompat
            android:background="@color/colorPrimary"
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:layout_height="wrap_content">
            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <androidx.appcompat.widget.LinearLayoutCompat
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <androidx.appcompat.widget.LinearLayoutCompat
                        android:weightSum="1"
                        android:layout_width="match_parent"
                        android:orientation="horizontal"
                        android:layout_height="wrap_content">
                        <androidx.appcompat.widget.LinearLayoutCompat
                            android:gravity="center_horizontal"
                            android:layout_width="wrap_content"
                            android:layout_weight="0.5"
                            android:orientation="horizontal"
                            android:layout_height="wrap_content">
                            <TextView
                                android:textSize="@dimen/dimen_texto_login"
                                android:textColor="@color/secondText"
                                android:textStyle="bold|normal"
                                android:text="@string/unidad"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content">
                            </TextView>
                            <Spinner
                                android:id="@+id/spinner_unidad_salida"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content">
                            </Spinner>
                        </androidx.appcompat.widget.LinearLayoutCompat>
                        <LinearLayout
                            android:gravity="center_horizontal"
                            android:layout_weight="0.5"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content">
                            <TextView
                                android:gravity="center_vertical"
                                android:layout_gravity="center_vertical"
                                android:textSize="@dimen/dimen_texto_login"
                                android:textStyle="bold|normal"
                                android:textColor="@color/secondText"
                                android:text="FECHA : "
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content">
                            </TextView>
                            <TextView
                                android:gravity="center_vertical"
                                android:layout_gravity="center_vertical"
                                android:id="@+id/txt_fecha"
                                android:textColor="@color/secondText"
                                android:textSize="@dimen/dimen_texto_login"
                                android:textStyle="bold|italic"
                                android:text="dd-mm-yyyy"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content">
                            </TextView>
                        </LinearLayout>
                    </androidx.appcompat.widget.LinearLayoutCompat>
                    <androidx.appcompat.widget.LinearLayoutCompat
                        android:weightSum="1"
                        android:gravity="center_vertical"
                        android:orientation="horizontal"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">
                        <androidx.appcompat.widget.LinearLayoutCompat
                            android:gravity="center_horizontal"
                            android:layout_weight="0.50"
                            android:orientation="horizontal"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content">
                            <TextView
                                android:textColor="@color/secondText"
                                android:textSize="@dimen/dimen_texto_login"
                                android:textStyle="bold|normal"
                                android:text="@string/druta"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content">
                            </TextView>
                            <Spinner
                                android:id="@+id/spinner_ruta_salida"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content">
                            </Spinner>
                        </androidx.appcompat.widget.LinearLayoutCompat>
                        <androidx.appcompat.widget.LinearLayoutCompat
                            android:layout_weight="0.5"
                            android:orientation="horizontal"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content">
                            <Button
                                android:textAlignment="center"
                                android:textStyle="bold|normal"
                                android:text="@string/asig_salida"
                                android:theme="@style/RaisedButtonDark"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content">
                            </Button>
                        </androidx.appcompat.widget.LinearLayoutCompat>
                    </androidx.appcompat.widget.LinearLayoutCompat>


                </androidx.appcompat.widget.LinearLayoutCompat>
            </androidx.cardview.widget.CardView>
            <androidx.appcompat.widget.AppCompatButton
                android:textStyle="normal|bold"
                android:text="@string/generar"
                android:theme="@style/RaisedButtonDark"
                android:id="@+id/btn_buscar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
            </androidx.appcompat.widget.AppCompatButton>
        </androidx.appcompat.widget.LinearLayoutCompat>
    </androidx.cardview.widget.CardView>
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycleview_salidas"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
    </androidx.recyclerview.widget.RecyclerView>
</androidx.appcompat.widget.LinearLayoutCompat>